crc-openshift/keycloak/keycloak-deployement.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: dep-graph
  labels:
    app: keycloak
spec:
  serviceName: keycloak
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:13.0.1
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
