crc-openshift/keycloak/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  namespace: dep-graph
spec:
  path: /
  to:
    kind: Service
    name: keycloak
  port:
    targetPort: 8080
